k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mfe-ingress
  namespace: mfe
spec:
  ingressClassName: nginx
  rules:
    - host: mfe.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shell
                port:
                  number: 80

    - host: products.mfe.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: products
                port:
                  number: 80

    - host: orders.mfe.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 80

    - host: users.mfe.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 80
